[package]
name = "nym-dumpster"
version = "0.0.1"
homepage = "https://github.com/parazyd/nym-dumpster"
description = "Native IO stream over a dumpster fire"
authors = ["parazyd <parazyd@dyne.org>"]
repository = "https://github.com/parazyd/nym-dumpster"
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
async-tungstenite = { version = "0", default-features = false, features = ["async-std-runtime"] }

async-std = "1"
futures = "0"
rand = "0"
log = "0"

nym-sphinx = {git="https://github.com/nymtech/nym", tag="v1.1.22"}
nym-websocket = {package="nym-client-websocket-requests", git="https://github.com/nymtech/nym", tag="v1.1.22"}

[dev-dependencies]
async-attributes = "1"
env_logger = "0"
